// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Common/Heading Heading 1`] = `
<div
  className="chakra-stack css-wulyol"
>
  <div
    className="css-gmuwbf"
  >
    <h1
      className="chakra-heading css-zdriq2"
    >
      Photo
      <h1
        className="chakra-heading css-1ls7px6"
      >
        wall
      </h1>
      
    </h1>
  </div>
  <div
    className="css-gmuwbf"
  >
    <h2
      className="chakra-heading css-r3wqqr"
    >
      Photo
      <h2
        className="chakra-heading css-16tf5s8"
      >
        wall
      </h2>
      
    </h2>
  </div>
</div>
`;

exports[`Storyshots Common/Heading Interactive Heading 1`] = `
<div
  className="css-gmuwbf"
>
  <h1
    className="chakra-heading css-zdriq2"
  >
    Photo
    <h1
      className="chakra-heading css-1ls7px6"
    >
      wall
    </h1>
    
  </h1>
</div>
`;
